--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE htmo>
+<!DOCTYPE html>
 <html lang="pl" lang="pl" dir="ltr">
   <head>
     <meta charset="UTF-8" />
@@ -6,6 +6,7 @@
   </head>
 
   <body>
-    <script type="text/javascript" src="skay-bot.js" defer></script>
+    <script src="./assets/otherFunctions.js" defer></script>
+    <script src="skay-bot.js" defer></script>
   </body>
 </html>
