Implement three methods to Bot Class: createChatBox, greeting and saySomething

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   </head>
 
   <body>
-    <script src="./assets/otherFunctions.js" defer></script>
+    <!--<script src="./assets/otherFunctions.js" defer></script>-->
     <script src="skay-bot.js" defer></script>
+    <script src="./assets/botProtos.js" defer></script>
   </body>
 </html>
