Create an User's instance
I deleted the Event Listener from askName Prototype and moved it to main file.
Because Events are Asynchronous, I packed those into Promise to get Value which we get after User puts in form, so we can use it later to create instance of that user (name)
We can answer to our User now :)

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <body>
     <!--<script src="./assets/otherFunctions.js" defer></script>-->
-    <script src="..assets/EventHandler.js" defer></script>
+    <script src="./assets/EventHandler.js" defer></script>
     <script src="./assets/botProtos.js" defer></script>
     <script src="skay-bot.js" defer></script>
   </body>
