--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <!--<script src="./assets/otherFunctions.js" defer></script>-->
     <script src="./assets/EventHandler.js" defer></script>
-    <script src="./assets/botProtos.js" defer></script>
+    <script src="./assets/protos.js" defer></script>
     <script src="skay-bot.js" defer></script>
   </body>
 </html>
