Delete module type from script tag

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <!-- <script src="./assets/helpContent.json" defer></script> -->
     <script src="./assets/EventHandler.js" defer></script>
     <script src="./assets/protos.js" defer></script>
-    <script type="module" src="skay-bot.js" defer></script>
+    <script src="skay-bot.js" defer></script>
   </body>
 </html>
