--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pl" lang="pl" dir="ltr">
   <head>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="skay-bot.css" />
     <title> Skay Bot </title>
   </head>
 
