Add first styles

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="pl" lang="pl" dir="ltr">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="skay-bot.css" />
+    <link rel="stylesheet"
+href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
+    <link rel="stylesheet" type="text/css" href="skay-bot.css" />
     <title> Skay Bot </title>
   </head>
 
