--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@ href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
   </head>
 
   <body>
-    <!-- <script src="./assets/helpContent.json" defer></script> -->
-    <script src="./assets/EventHandler.js" defer></script>
-    <script src="./assets/protos.js" defer></script>
-    <script src="skay-bot.js" defer></script>
+    <script type="module" src="skay-bot.js" defer></script>
   </body>
 </html>
